--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ body{
 @media screen and (max-width: 768px){
     .allGlobalcontainer{
         /* border: 1px solid red; */
-        margin: 30px auto;
-        height: 100%;
+        margin: 20px auto;
+        /* height: 20%; */
         border-radius: 10px;
-        /* padding-bottom: 100px; */
+       
     }
 
 }
@@ -123,7 +123,7 @@ section #Animal{
     background-color:black;
     margin-bottom: 20px;
     border-radius: 7px;
-    -webkit-appearance: none;
+    /* -webkit-appearance: none; */
     
 }
 
@@ -179,7 +179,7 @@ textarea{
         /* border: 1px solid red; */
         padding:  10px;
         width: 50%;
-        margin: 10px 150px;
+        margin: 10px 80px;
         border-radius: 7px;
         background-color: lawngreen;
         color: black;
